--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ fetch('./config.json').then(function(response) {
 }).then(function(data) {
   radar_visualization({
     repo_url: "https://github.com/zalando/tech-radar",
-    title: "Zalando Tech Radar",
+    title: "Jacek Milewski's Tech Radar",
     date: data.date,
     quadrants: [
       { name: "Languages" },
